--- a/index.html
+++ b/index.html
@@ -39,13 +39,27 @@
     <script>
       const apiKey = "0ddfc7a876ecc2d32f601a01bb326c26";
       const apiUrl =
-        "https://api.openweathermap.org/data/2.5/weather?units=metric&q=germany";
-      async function checkWeather() {
-        const response = await fetch(apiUrl + `&appid=${apiKey}`);
+        "https://api.openweathermap.org/data/2.5/weather? units=metric";
+      const searchbox = document.querySelector(".search input");
+      const searchBtn = document.querySelector(".search button");
+      async function checkWeather(city) {
+        const response = await fetch(
+          apiUrl + `&q=${city}` + `&appid=${apiKey}` + "&units=metric"
+        );
         var data = await response.json();
         console.log(data);
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML =
+          Math.round(data.main.temp) + "°c";
+        document.querySelector(".humidity").innerHTML =
+          data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + "km/hr";
       }
-      checkWeather();
+      searchBtn.addEventListener("click", () => {
+        checkWeather(searchbox.value);
+        console.log(apiUrl);
+      });
+      // checkWeather(city);
     </script>
   </body>
 </html>
