--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         "https://api.openweathermap.org/data/2.5/weather? units=metric";
       const searchbox = document.querySelector(".search input");
       const searchBtn = document.querySelector(".search button");
+      const weatherIcon = document.querySelector(".weather-icon");
       async function checkWeather(city) {
         const response = await fetch(
           apiUrl + `&q=${city}` + `&appid=${apiKey}` + "&units=metric"
@@ -53,6 +54,22 @@
         document.querySelector(".humidity").innerHTML =
           data.main.humidity + "%";
         document.querySelector(".wind").innerHTML = data.wind.speed + "km/hr";
+
+        if (data.weather[0].main == "Clouds") {
+          weatherIcon.src = "images/clouds.png";
+        }
+        if (data.weather[0].main == "Clear") {
+          weatherIcon.src = "images/clear.png";
+        }
+        if (data.weather[0].main == "Rain") {
+          weatherIcon.src = "images/rain.png";
+        }
+        if (data.weather[0].main == "Drizzle") {
+          weatherIcon.src = "images/drizzle.png";
+        }
+        if (data.weather[0].main == "Mist") {
+          weatherIcon.src = "images/mist.png";
+        }
       }
       searchBtn.addEventListener("click", () => {
         checkWeather(searchbox.value);
